# EmotionSense

./: .gitignore  CMakeLists.txt  cpp-dev_dependencies.txt  cv.sh  dev.sh  dockerfile  main  main.cpp  sui  sui.cpp
lib/detection/: CMakeLists.txt
lib/detection/src/: UltraFace.cpp  UltraFace.hpp
lib/frameReader/: frameReader.cpp  frameReader.hpp
lib/frame_reader/: CMakeLists.txt  frame_reader.cpp  frame_reader.hpp
lib/preprocessor/: CMakeLists.txt  preprocessor.cpp  preprocessor.hpp
src/: CMakeLists.txt  main.cpp
src/common/: customqueue.h  funcs.h  structs.h
src/detection/: CMakeLists.txt  UltraFace.cpp  UltraFace.hpp  ultraface.cpp  ultraface.h
src/detection/ncnn_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
src/detection/ncnn_build/benchmark/: Makefile  benchncnn  cmake_install.cmake
src/detection/ncnn_build/src/: Makefile  cmake_install.cmake
src/detection/ncnn_build/tools/: Makefile  cmake_install.cmake  ncnn2mem  ncnnoptimize
src/detection/ncnn_build/tools/caffe/: Makefile  caffe2ncnn  cmake_install.cmake
src/detection/ncnn_build/tools/mxnet/: Makefile  cmake_install.cmake  mxnet2ncnn
src/detection/ncnn_build/tools/onnx/: Makefile  cmake_install.cmake  onnx2ncnn
src/emoreg/: CMakeLists.txt  emo.cpp  emo.h
src/frameReader/: CMakeLists.txt  frameReader.cpp  frameReader.hpp
src/python/: format2onnx.py  ptinfer.py  ptmodelarch.py  tfinfer.py  tfmodelarch.py
src/reader/: CMakeLists.txt  reader.cpp  reader.h  reader.hpp
src/tracking/: CMakeLists.txt  tracker.cpp  tracker.h
